Done with about us page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav class="navbar">
       <img src="./images/logo.png" alt="company logo" class="logo" />
       <ul class="navbarLinks">
-        <li><a href="#">About Us</a></li>
+        <li><a href="#about">About Us</a></li>
         <li><a href="">Galary</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
