Done with gallery

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav class="navbar">
       <img src="./images/logo.png" alt="company logo" class="logo" />
       <ul class="navbarLinks">
-        <li><a href="#about">About Us</a></li>
-        <li><a href="">Galary</a></li>
+        <li><a href="./about.html">About Us</a></li>
+        <li><a href="./gallery.html">Galary</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
