--- a/about.html
+++ b/about.html
@@ -6,47 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
 <link rel="stylesheet" href="./styles/style.css">
- 
-    <style>
-        .image{
-          width: 100%;
-        }
-
-        .founder-text, .founder-name{
-          text-align: center;
-          font-weight: 700;
-          margin-bottom: 20px;
-        }
-
-        .text-in-about{
-          width: 90%;
-          margin-top: 20px;
-          margin: 0 auto;
-          padding-bottom: 20px;
-          text-align: justify;
-        }
-
-        @media screen and (min-width: 1200px) {
-          .image{
-            width: 30%;
-          }
-
-          .container2{
-            display: flex;
-          }
-}
-    </style>
+       
 </head>
 <body>
   <!---------- Navigation Bar ------------->
   <nav class="navbar">
-    <img src="./images/logo.png" alt="company logo" class="logo" />
-    <ul class="navbarLinks">
-      <li><a href="#about">About Us</a></li>
-      <li><a href="">Galary</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+    <a href="./index.html"><img src="./images/logo.png" alt="company logo" class="logo" /></a> 
+     <ul class="navbarLinks">
+       <li><a href="./about.html">About Us</a></li>
+       <li><a href="./gallery.html">Galary</a></li>
+       <li><a href="./index.html#contact">Contact</a></li>
+     </ul>
+   </nav>
 
     <section class="aboutUsPage">
       <h1 class="aboutUsTitle">About Us</h1>
