--- a/gallery.html
+++ b/gallery.html
@@ -10,13 +10,13 @@
 <body>
     <!---------- Navigation Bar ------------->
     <nav class="navbar">
-        <img src="./images/logo.png" alt="company logo" class="logo" />
-        <ul class="navbarLinks">
-          <li><a href="#about">About Us</a></li>
-          <li><a href="">Galary</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+        <a href="#"><img src="./images/logo.png" alt="company logo" class="logo" /></a> 
+         <ul class="navbarLinks">
+           <li><a href="./about.html">About Us</a></li>
+           <li><a href="./gallery.html">Galary</a></li>
+           <li><a href="./index.html#contact">Contact</a></li>
+         </ul>
+       </nav>
 
         <section class="gallery">
             <h1 class="galleryTitle">Gallery</h1>
