--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <!---------- Navigation Bar ------------->
     <nav class="navbar">
-      <img src="./images/logo.png" alt="company logo" class="logo" />
+     <a href="./index.html"><img src="./images/logo.png" alt="company logo" class="logo" /></a> 
       <ul class="navbarLinks">
         <li><a href="./about.html">About Us</a></li>
         <li><a href="./gallery.html">Galary</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="./index.html#contact">Contact</a></li>
       </ul>
     </nav>
 
