--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <!---------- Navigation Bar ------------->
     <nav class="navbar">
-     <a href="./index.html"><img src="./images/logo.png" alt="company logo" class="logo" /></a> 
+     <a href="#"><img src="./images/logo.png" alt="company logo" class="logo" /></a> 
       <ul class="navbarLinks">
         <li><a href="./about.html">About Us</a></li>
-        <li><a href="./gallery.html">Galary</a></li>
+        <li><a href="./gallery.html">Gallery</a></li>
         <li><a href="./index.html#contact">Contact</a></li>
       </ul>
     </nav>
@@ -29,7 +29,7 @@
     <div class="cardCenter">
       <div class="cardExperience card">
         <h6 class="cardHead">
-          30 + <br />
+           30+<br />
           Years
         </h6>
         <p class="cardPara">
@@ -113,7 +113,7 @@
       <div id="contact" class="contactInfo">
         <section class="centeringContact">
           <img class="contactImg" src="./images/call.jpg" alt="call icon" />
-          +91 766653692
+          +91 9766653692
         </section>
         <section class="centeringContact">
           <img class="contactImg" src="./images/email.jpg" alt="call icon" />
