--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
         <a href="#"><img src="./images/logo.png" alt="company logo" class="logo" /></a> 
          <ul class="navbarLinks">
            <li><a href="./about.html">About Us</a></li>
-           <li><a href="./gallery.html">Galary</a></li>
+           <li><a href="./gallery.html">Gallery</a></li>
            <li><a href="./index.html#contact">Contact</a></li>
          </ul>
        </nav>
