changes by client

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!---------- Home ------------->
     <main>
       <section class="banner">
-        <img src="./images/logo.png" alt="banner logo" />
+        <img src="./images/banner.png" alt="banner logo" />
         <h3 class="tagline">"Our Quality is Your Trust"</h3>
       </section>
     </main>
@@ -33,7 +33,7 @@
           Years
         </h6>
         <p class="cardPara">
-          Of Experience in This<br />
+          Of Experience in This
           Industry
         </p>
       </div>
