--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="cardProdcut card">
         <img class="productImages" src="./images/shirt.png" alt="scarfs" />
         <div class="productInfo">
-          <h3 class="productName">Shirting & Shooting</h3>
+          <h3 class="productName">Shirting & Suiting</h3>
           <p class="productDescription">
             We have best in class shirting, providing the finest quality of
             shirting from last 30 years......
@@ -147,7 +147,7 @@
       </section>
       <section class="footerAddress">
        <h6>Vineet Textiles | GSTIN : 27ABOPB2847D1ZT</h6> 
-        <address class="footerAddress__address">Ichalkaranji Coop.Textile BJP Market C-11/3 , Ichalkaranji 416115</address> 
+        <address class="footerAddress__address">Ichalkaranji Coop.Textile BJP Market C-11/3 , Ichalkaranji , India 416115</address> 
       </section>
     </footer>
   </body>
