--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
       <section class="footerAddress">
        <h6>Vineet Textiles | GSTIN : 27ABOPB2847D1ZT</h6> 
         <address class="footerAddress__address">Ichalkaranji Coop.Textile BJP Market C-11/3 , Ichalkaranji , India 416115</address> 
+        <img src="https://upload.wikimedia.org/wikipedia/en/4/46/Make_In_India.png" alt="Made in india" style="width: 100px; margin-bottom: 20px;">
       </section>
     </footer>
   </body>
