--- a/index.html
+++ b/index.html
@@ -39,50 +39,53 @@
       </div>
       <!---------- Products ------------->
       <h1 class="productHeading">Our Products Include</h1>
-      <div class="cardProdcut card">
-        <img class="productImages" src="./images/dhoties.jpg" alt="dhoties" />
-        <div class="productInfo">
-          <h3 class="productName">Dhoties</h3>
-          <p class="productDescription">
-            We provide the finest dhoties with range of 4 to 9 meteres of cloth
-            and lusturous finished product......
-          </p>
-          <a href="#contact" class="productContact">Contact Us..</a>
+      <div class="cardProductGrid">
+        <div class="cardProdcut card">
+          <img class="productImages" src="./images/dhoties.jpg" alt="dhoties" />
+          <div class="productInfo">
+            <h3 class="productName">Dhoties</h3>
+            <p class="productDescription">
+              We provide the finest dhoties with range of 4 to 9 meteres of cloth
+              and lusturous finished product......
+            </p>
+            <a href="#contact" class="productContact">Contact Us..</a>
+          </div>
+        </div>
+        <div class="cardProdcut card">
+          <img class="productImages" src="./images/lungis.jpg" alt="lungis" />
+          <div class="productInfo">
+            <h3 class="productName">Lungies</h3>
+            <p class="productDescription">
+              Having trouble finding the best quality lungi? You have come to the
+              right place. We provide the best quality of lungi......
+            </p>
+            <a href="#contact" class="productContact">Contact Us..</a>
+          </div>
+        </div>
+        <div class="cardProdcut card">
+          <img class="productImages" src="./images/scarf.png" alt="scarfs" />
+          <div class="productInfo">
+            <h3 class="productName">Scarfs</h3>
+            <p class="productDescription">
+              That'-s right we are a no stop solution for your Dhoties, Lungies
+              and now we also provide scarfs with the highest quality......
+            </p>
+            <a href="#contact" class="productContact">Contact Us..</a>
+          </div>
+        </div>
+        <div class="cardProdcut card">
+          <img class="productImages" src="./images/shirt.png" alt="scarfs" />
+          <div class="productInfo">
+            <h3 class="productName">Shirting & Suiting</h3>
+            <p class="productDescription">
+              We have best in class shirting, providing the finest quality of
+              shirting from last 30 years......
+            </p>
+            <a href="#contact" class="productContact">Contact Us..</a>
+          </div>
         </div>
       </div>
-      <div class="cardProdcut card">
-        <img class="productImages" src="./images/lungis.jpg" alt="lungis" />
-        <div class="productInfo">
-          <h3 class="productName">Lungies</h3>
-          <p class="productDescription">
-            Having trouble finding the best quality lungi? You have come to the
-            right place. We provide the best quality of lungi......
-          </p>
-          <a href="#contact" class="productContact">Contact Us..</a>
-        </div>
-      </div>
-      <div class="cardProdcut card">
-        <img class="productImages" src="./images/scarf.png" alt="scarfs" />
-        <div class="productInfo">
-          <h3 class="productName">Scarfs</h3>
-          <p class="productDescription">
-            That'-s right we are a no stop solution for your Dhoties, Lungies
-            and now we also provide scarfs with the highest quality......
-          </p>
-          <a href="#contact" class="productContact">Contact Us..</a>
-        </div>
-      </div>
-      <div class="cardProdcut card">
-        <img class="productImages" src="./images/shirt.png" alt="scarfs" />
-        <div class="productInfo">
-          <h3 class="productName">Shirting & Suiting</h3>
-          <p class="productDescription">
-            We have best in class shirting, providing the finest quality of
-            shirting from last 30 years......
-          </p>
-          <a href="#contact" class="productContact">Contact Us..</a>
-        </div>
-      </div>
+      
     </div>
     <!---------- About Us ------------->
     <section id="about">
