--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
     </div>
     <!---------- About Us ------------->
     <section id="about">
-      <h2 class="aboutHeading">About Us</h2>
+      <div class="aboutMain">
+           <h2 class="aboutHeading">About Us</h2>
       <div class="aboutInformation">
         <section class="founderImageName">
           <img class="founderImage" src="./images/founde.jpeg" alt="founder" />
@@ -109,6 +110,8 @@
           <a href="./about.html" class="aboutRead__more">Read More...</a>
         </section>
       </div>
+      </div>
+     
     </section>
     <!---------- Contact Us ------------->
     <div>
