--- a/about.html
+++ b/about.html
@@ -1,38 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-<link rel="stylesheet" href="./styles/style.css">
-       
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Us</title>
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/about.css">
 </head>
+
 <body>
   <!---------- Navigation Bar ------------->
   <nav class="navbar">
-    <a href="./index.html"><img src="./images/logo.png" alt="company logo" class="logo" /></a> 
-     <ul class="navbarLinks">
-       <li><a href="./about.html">About Us</a></li>
-       <li><a href="./gallery.html">Gallery</a></li>
-       <li><a href="./index.html#contact">Contact</a></li>
-     </ul>
-   </nav>
+    <a href="./index.html"><img src="./images/logo.png" alt="company logo" class="logo" /></a>
+    <ul class="navbarLinks">
+      <li><a href="./about.html">About Us</a></li>
+      <li><a href="./gallery.html">Gallery</a></li>
+      <li><a href="./index.html#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-    <section class="aboutUsPage">
-      <h1 class="aboutUsTitle">About Us</h1>
-      <div class="aboutInfo">
-       <section class="about-left">
-        <img src="./images/founde.jpeg" class="aboutUsFounde__Image" alt="photo image">
+  <section class="aboutUsPage">
+    <h1 class="aboutUsTitle">About Us</h1>
+    <div class="aboutInfo">
+      <section class="aboutMid">
+        <img src="./images/founde.jpeg" class="aboutUsFounderImage" alt="photo image">
         <h2 class="aboutUsFounderTitle">Founder</h2>
         <h3 class="aboutUsFounderName">Lt.Mr Jawaharlalji Mishrimalji Bafna</h3>
       </section>
       <article class="aboutUsCompanyText">
-        Mikoba Group ( Vineet Textiles)  was founded by Late “Jawaharlalji Mishrimalji Bafna”. He started business in 1988 with a small textile shop and an intention of social work also. The company was started to prove the determination and great responsibility towards family with no background support and with time it became one of the greatest
+        &nbsp; &nbsp; &nbsp; &nbsp; Mikoba Group ( Vineet Textiles) was founded by Late “Jawaharlalji Mishrimalji Bafna”. He started business in
+        1988 with a small textile shop and an intention of social work also. The company was started to prove the
+        determination and great responsibility towards family with no background support and with time it became one of
+        the greatest
         and most reputed textile groups in Ichalkaranji as well as India.
-        Jawaharlal Bafna rose to serve Needy people so after successful 5 years at 1993/1994 he started an ayurvedic office. He promoted his offsprings Lt.Mr Lalit Jawaharlal Bafna & the younger Mr.Kailash Jawaharlal Bafna to continue the shop by them two under their guidance.
-        They successfully dominated and capitalised respect among all. He started several Seva or Services like Free Breakfast and Milk daily in the govt.hospitals also a hospital under Rajasthani Jain Seva Samiti as a Leader that anticipated as ₹10 charge for any problem.
-        Presently, the Group is managed by the second as well the third generation members of the founding family headed by Mr.Kailash Jawaharlal Bafna  as its old founding members and Mr.Sanskar Lalit Bafna ( elder son of Lt.Lalit Jawaharlal Bafna)
+        Jawaharlal Bafna rose to serve Needy people so after successful 5 years at 1993/1994 he started an ayurvedic
+        office. He promoted his offsprings Lt.Mr Lalit Jawaharlal Bafna & the younger Mr.Kailash Jawaharlal Bafna to
+        continue the shop by them two under their guidance.
+        They successfully dominated and capitalised respect among all. He started several Seva or Services like Free
+        Breakfast and Milk daily in the govt.hospitals also a hospital under Rajasthani Jain Seva Samiti as a Leader
+        that anticipated as ₹10 charge for any problem.
+        Presently, the Group is managed by the second as well the third generation members of the founding family headed
+        by Mr.Kailash Jawaharlal Bafna as its old founding members and Mr.Sanskar Lalit Bafna ( elder son of Lt.Lalit
+        Jawaharlal Bafna)
       </article>
       <address class="aboutUsAddress">
         Vineet Textiles <br>
@@ -40,6 +51,8 @@
         Ichalkaranji Coop.Textile BJP Market C-11/3 , Ichalkaranji <br>
         416115 <br>
       </address>
+    </div>
   </section>
 </body>
+
 </html>
